# dander

./: .gitignore  CMakeLists.txt  README.md
firmware/: CMakeLists.txt  partitions.csv
firmware/main/: CMakeLists.txt  Kconfig.projbuild  node_main.cpp  ota_update.cpp  ota_update.h  remote_ota.cpp  remote_ota.h  time_sync.cpp  time_sync.h  udp_sender.cpp  udp_sender.h  wifi_sta.cpp  wifi_sta.h
include/dander/: byte_order.h  pms7003m_parse.h  udp_packet.h
models/: dander_field.norm.json  dander_field.onnx  dander_field.onnx.data
notebooks/: skeleton.ipynb
src/: main.cpp
src/inference/: field_model.cpp  field_model.h  ort_smoke.cpp
src/sensor/: pms7003m.cpp  pms7003m.h
src/storage/: schema.h  sqlite_reader.cpp  sqlite_reader.h  sqlite_store.cpp  sqlite_store.h
src/viewer/: floorplan.h  main.cpp  marker.h  render_field.cpp
tests/: test_byte_order.cpp  test_pms7003m_parse.cpp  test_udp_packet.cpp
